--- a/1650/rails-advanced-routing/lecture/rails-beyond-crud/Gemfile
+++ b/1650/rails-advanced-routing/lecture/rails-beyond-crud/Gemfile
@@ -23,6 +23,8 @@ gem "turbo-rails"
 
 # Hotwire's modest JavaScript framework [https://stimulus.hotwired.dev]
 gem "stimulus-rails"
+gem "simple_form"
+
 
 # Use Redis adapter to run Action Cable in production
 gem "redis", "~> 4.0"
